small fix on formateur component display on firefox

--- a/src/app/components/formateur/formateur.component.css
+++ b/src/app/components/formateur/formateur.component.css
@@ -35,6 +35,10 @@ p.palo-formateur-bio {
     font-weight: 600;
 }
 
+img.palo-avatar-formateur {
+    flex-shrink: 0;
+}
+
 /***********************************/
 /* Orientation-specific properties */
 /***********************************/
